--- a/.github/workflows/RDP365-US.yml
+++ b/.github/workflows/RDP365-US.yml
@@ -1,4 +1,4 @@
-name: RDP1
+name: RDP-US
 
 on: workflow_dispatch
 
@@ -19,7 +19,7 @@ jobs:
       env:
         NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
     - name: Make YML file for NGROK.
-      run: start NGROK-AP.bat
+      run: start NGROK-US.bat
     - name: Enable RDP Access.
       run: | 
         Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server'-name "fDenyTSConnections" -Value 0
