--- a/.github/workflows/RDP365-JAPAN.yml
+++ b/.github/workflows/RDP365-JAPAN.yml
@@ -19,7 +19,7 @@ jobs:
       env:
         NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
     - name: Make YML file for NGROK.
-      run: start NGROK-JP.bat
+      run: start NGROK-JEPANG.bat
     - name: Enable RDP Access.
       run: | 
         Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server'-name "fDenyTSConnections" -Value 0
